<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:visibility="gone"
        android:id="@+id/noFavorite_holder"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:textSize="28sp"
        android:gravity="center"
        android:text="@string/noFavorite"
        />

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/favoritesListView_Holder"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <!-- COLUMN DESCRIPTION -->
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#1976D2">

            <TextView
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:textSize="16sp"
                android:gravity="center"
                android:text="@string/station"
                android:layout_weight="0.66"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@color/primary_text_default_material_dark"
                />

            <TextView
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:textSize="16sp"
                android:gravity="center"
                android:text="@string/bikes"
                android:layout_weight="0.18"
                android:textStyle="bold"
                android:textColor="@color/primary_text_default_material_dark"
                />
            <TextView
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:textSize="16sp"
                android:gravity="center"
                android:text="@string/parking"
                android:layout_weight="0.18"
                android:textStyle="bold"
                android:textColor="@color/primary_text_default_material_dark"
                />
        </LinearLayout>

        <ListView
            android:id="@+id/favorites_listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </ListView>
    </LinearLayout>

</LinearLayout>

